--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
   "author": "Rodrigo Labrador",
   "license": "ISC",
   "dependencies": {
+    "@hapi/joi": "^17.1.1",
     "body-parser": "^1.19.0",
     "express": "^4.17.1",
     "nodemailer": "^6.4.2"
